--- a/_sass/minimal-mistakes/_mixins.scss
+++ b/_sass/minimal-mistakes/_mixins.scss
@@ -90,3 +90,11 @@
   background-color: $background-color;
   color: yiq-contrast-color($background-color, $dark, $light, $threshold);
 }
+
+
+// breakpoint max width mixin
+@mixin breakpoint-max-width($max-width) {
+  @media screen and (max-width: #{$max-width}) {
+    @content;
+  }
+}
