--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -94,7 +94,8 @@ body {
   }
 
   p,
-  li {
+  li,
+  pre {
     max-width: $medium;
     font-weight: $weight-4;
   }
@@ -653,14 +654,4 @@ body {
   body{
     font-size: 1.4em;
   }
-
-  .toc__menu {
-    font-size: .85em;
-
-    li ul > li a {
-      padding-left: 1rem;
-    }
-
-  }
-
 }
