--- a/_sass/minimal-mistakes/_pyos-grid.scss
+++ b/_sass/minimal-mistakes/_pyos-grid.scss
@@ -138,14 +138,19 @@ $colors: (
 .cards {
     top: 0px;
     position: relative;
-    // max-width: 362px;
     background-color: #fcfbf5;;
     border-radius: 4px;
     text-decoration: none;
     z-index: 0;
     overflow: hidden;
-    border: 1px solid #f2f8f9;
+    border: 1px solid #ccc;
     font-size: .8em;
+
+    @include breakpoint-max-width(480px) {
+      .cards {
+        padding: 2em;
+      }
+    }
 
     &__image {
       max-height: calc($small/3);
@@ -308,8 +313,8 @@ $colors: (
 }
 
 
-  /* Adjust font size on cards  */
-  .narrow {
+/* Adjust font size on cards  */
+.narrow {
     font-size: .8em!important;
   }
 
@@ -332,6 +337,5 @@ $colors: (
       grid-gap: 1rem;
       grid-template-columns: repeat(3, 1fr);
       grid-auto-flow: unset;
-
     }
   }
