--- a/_sass/minimal-mistakes/_pyos-main.scss
+++ b/_sass/minimal-mistakes/_pyos-main.scss
@@ -143,10 +143,6 @@ h2.clearall {
     font-size: 1.3em;
   }
 
-  .cards {
-    padding: 10px!important;
-  }
-
   .contrib_org, .ppl_social {
     font-size: .9em !important;
   }
